nais/dev-gcp/naisdeployment.yaml
apiVersion: "nais.io/v1alpha1"
kind: "Deployment"
metadata:
  name: dittnav-event-handler-deployment
  namespace: personbruker
  labels:
    team: personbruker
spec:
  containers:
    image: docker.pkg.github.com/navikt/dittnav-event-handler/dittnav-event-handler:20210625153843-04a453c
    imagePullPolicy: IfNotPresent
    name: dittnav-event-handler
    ports:
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet: /internal/isAlive
      port: 8080
      initialDelaySeconds: 20
    readinessProbe:
      httpGet: /internal/isReady
      port: 8080
      initialDelaySeconds: 20
  prometheus:
    enabled: true
    path: /metrics
  replicas:
    min: 4
    max: 4
  webproxy: true
  ingresses:
    - "https://dittnav-event-handler.dev.nav.no"
  resources:
    limits:
      cpu: "3"
      memory: 768Mi
    requests:
      cpu: "500m"
      memory: 384Mi
  accessPolicy:
    outbound:
      external:
        - host: kafka-schema-registry.nais-q.adeo.no
