nais/dev-gcp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dittnav-event-handler
    team: personbruker
  name: dittnav-event-handler
  namespace: personbruker
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: dittnav-event-handler
  type: ClusterIP
